--- a/src/website/index.html
+++ b/src/website/index.html
@@ -20,7 +20,7 @@
 
     <div class="parallax1" id="home">
         <div class="title-display" style="white-space:nowrap;">
-            <span class="title-base title-anim">Le première application de dépot <br> de projet independant en France </span>
+            <span class="title-base title-anim">La première application de dépot <br> de projet indépendant en France </span>
         </div>
         <div class="pos title-anim"><h3 class="descriptif">Pour une visibilitée direct de vos projets<br>
             à travers le monde de leurs évolutions, leurs notations<br>
@@ -32,7 +32,7 @@
 
     <div class ="par">
         <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:right;margin-right: 10%;">
-        <div style="line-height: 200%;margin-top: 2%;">
+        <div style="line-height: 200%;padding: 70px 0;">
         PunyDuck est une plateforme open source de dépot de projet.<br>
         Son objectif est de réunir les divers projets (application, jeu, logiciel, etc...) de chacuns.<br>
         De pouvoir aidé lun projet à voir le jour, le soutenir, le télécharger<br>
@@ -40,20 +40,20 @@
     </div></div>
     <div class ="par">
         <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:left;margin-left: 10%">
-        <div style="line-height: 200%;margin-top: 2%;">  
+        <div style="line-height: 200%;padding: 70px 0;">  
         La plateforme est entierement personnalisable pour qu'elle <br>
         s'adapte à vos goûts et à vos préférences.<br>
     </div></div>
     <div class ="par">
         <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:right;;margin-right: 10%">
-        <div style="line-height: 200%;margin-top: 2%;"> 
+        <div style="line-height: 200%;padding: 70px 0;"> 
         Possiblitées de savoir ce que penses les gens de votre projets.<br>
         Critiques, encouragement, avis... Car oui, ils pourront télécharger la version<br>
         de votre projet que vous aurrez données.
     </div></div>
     <div class ="par">
         <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:left;;margin-left: 10%">
-        <div style="line-height: 200%;margin-top: 2%;">
+        <div style="line-height: 200%;padding: 70px 0;">
         Sécurité assurer avec le contrôle des dépots de projets pour que aucun vius ne soit à déclarer
     </div></div>
     
