--- a/src/website/index.html
+++ b/src/website/index.html
@@ -20,41 +20,33 @@
 
     <div class="parallax1" id="home">
         <div class="title-display" style="white-space:nowrap;">
-            <span class="title-base title-anim">La première application de dépot <br> de projet indépendant en France </span>
+            <span class="title-base title-anim">La première application de dépôt <br> de projet indépendant en France </span>
         </div>
         <div class="pos title-anim"><h3 class="descriptif">Pour une visibilitée direct de vos projets<br>
-            à travers le monde de leurs évolutions, leurs notations<br>
-            et bien d'autres choses, dans une intérface quasiment<br>
-            PERSONNALISABLE.</h3>
+            à travers le monde et bien plus encore !</h3>
         <button class="button" style="vertical-align:middle">
         <span><a href="punyduck-master.zip" download="punyduck-master.zip">TÉLÉCHARGER</a></span></button></div>
     </div>
 
     <div class ="par">
         <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:right;margin-right: 10%;">
-        <div style="line-height: 200%;padding: 70px 0;">
-        PunyDuck est une plateforme open source de dépot de projet.<br>
-        Son objectif est de réunir les divers projets (application, jeu, logiciel, etc...) de chacuns.<br>
-        De pouvoir aidé lun projet à voir le jour, le soutenir, le télécharger<br>
+        <div class="stl">
+        PunyDuck est une application libre de dépôt de projet.<br>
+        Son objectif est de réunir les divers projets (application, jeu, logiciel, etc...) de chacun.<br>
+        De pouvoir aider lun projet à voir le jour, le soutenir, le télécharger<br>
         Le tester, donner son avis ou un conseil, et ainsi de suite.
     </div></div>
     <div class ="par">
-        <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:left;margin-left: 10%">
-        <div style="line-height: 200%;padding: 70px 0;">  
-        La plateforme est entierement personnalisable pour qu'elle <br>
-        s'adapte à vos goûts et à vos préférences.<br>
-    </div></div>
-    <div class ="par">
-        <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:right;;margin-right: 10%">
-        <div style="line-height: 200%;padding: 70px 0;"> 
-        Possiblitées de savoir ce que penses les gens de votre projets.<br>
+        <img src="image1.jpg" alt="duck" style="width:20%;height: 20%;float:right;;margin-right: 10%">
+        <div class="stl"> 
+        Possiblités de savoir ce que pensent les gens de votre projet.<br>
         Critiques, encouragement, avis... Car oui, ils pourront télécharger la version<br>
-        de votre projet que vous aurrez données.
+        de votre projet que vous aurez données.
     </div></div>
     <div class ="par">
-        <img src="image4.jpg" alt="duck" style="width:20%;height: 20%;float:left;;margin-left: 10%">
-        <div style="line-height: 200%;padding: 70px 0;">
-        Sécurité assurer avec le contrôle des dépots de projets pour que aucun vius ne soit à déclarer
+        <img src="image2.jpg" alt="duck" style="width:20%;height: 20%;float:left;;margin-left: 10%">
+        <div class="stl">
+        Sécurité assurée avec le contrôle des dépôts de projets pour qu'aucun vius ne soit à déclarer.
     </div></div>
     
 
@@ -65,11 +57,25 @@
     </div>
 
     <div class ="par">
-        On devra juste expliquer avec différent screen comment fonctionne le client.<br>
-        Une partie sera donc générale, puis chaque autre décrira sont contenu.<br>
-        Par exemple sur la page projet montrer comment en mettre un en ligne <br>
-        Puis sur celle de la personnalisation, comment changer certains emplacement.<br>
-        Tout cela suivie de screen bien agencé.
+        <div class ="par">
+            <img src="image5.png" alt="duck" style="width:20%;height: 20%;float:left;margin-left: 10%">
+            <div class="stl">  
+            La page pour s'enregistrer et pouvoir accéder à Punuduck<br>
+            est simple, sobre et nous vous posera aucun problème pour vous y connecter.<br>
+        </div></div>
+        <div class ="par">
+            <img src="image6.png" alt="duck" style="width:20%;height: 20%;float:right;;margin-right: 10%">
+            <div class="stl"> 
+            La page projet détient l'ensemble des projets mis en ligne, avec la possiblité<br>
+            d'en rechercher un bien spécifique, ou encore de trier l'ensemble des projets<br>
+            Vous pouvez également changer la vue des projets, soit en liste détailée ou en icône.<br>
+            Ensuite pour télécharger un projet, le petit boton vert est là pour ça.
+        </div></div>
+        <div class ="par">
+            <img src="image7.png" alt="duck" style="width:20%;height: 20%;float:left;;margin-left: 10%">
+            <div class="stl">
+            La page dépôts va vous permettre de déposer votre projet en lui intribuant son tag (doc, jeu,...).
+        </div></div>
     </div>
 
     <div class="parallax2" id="contact">
