--- a/src/website/index.html
+++ b/src/website/index.html
@@ -33,7 +33,7 @@
         <div class="stl">
         PunyDuck est une application libre de dépôt de projet.<br>
         Son objectif est de réunir les divers projets (application, jeu, logiciel, etc...) de chacun.<br>
-        De pouvoir aider lun projet à voir le jour, le soutenir, le télécharger<br>
+        De pouvoir aider un projet à voir le jour, le soutenir, le télécharger<br>
         Le tester, donner son avis ou un conseil, et ainsi de suite.
     </div></div>
     <div class ="par">
@@ -41,12 +41,7 @@
         <div class="stl"> 
         Possiblités de savoir ce que pensent les gens de votre projet.<br>
         Critiques, encouragement, avis... Car oui, ils pourront télécharger la version<br>
-        de votre projet que vous aurez données.
-    </div></div>
-    <div class ="par">
-        <img src="image2.jpg" alt="duck" style="width:20%;height: 20%;float:left;;margin-left: 10%">
-        <div class="stl">
-        Sécurité assurée avec le contrôle des dépôts de projets pour qu'aucun vius ne soit à déclarer.
+        de votre projet que vous aurez donné.
     </div></div>
     
 
@@ -58,13 +53,13 @@
 
     <div class ="par">
         <div class ="par">
-            <img src="image5.png" alt="duck" style="width:20%;height: 20%;float:left;margin-left: 10%">
+            <img src="image5.png" alt="duck" style="width:35%;height: 35%;float:left;margin-left: 10%">
             <div class="stl">  
-            La page pour s'enregistrer et pouvoir accéder à Punuduck<br>
-            est simple, sobre et nous vous posera aucun problème pour vous y connecter.<br>
+            La page pour s'enregistrer et pouvoir accéder à Punyduck<br>
+            est simple, sobre et ne vous posera aucun problème pour vous y connectez.<br>
         </div></div>
         <div class ="par">
-            <img src="image6.png" alt="duck" style="width:20%;height: 20%;float:right;;margin-right: 10%">
+            <img src="image6.png" alt="duck" style="width:35%;height: 35%;float:right;;margin-right: 10%">
             <div class="stl"> 
             La page projet détient l'ensemble des projets mis en ligne, avec la possiblité<br>
             d'en rechercher un bien spécifique, ou encore de trier l'ensemble des projets<br>
@@ -72,9 +67,9 @@
             Ensuite pour télécharger un projet, le petit boton vert est là pour ça.
         </div></div>
         <div class ="par">
-            <img src="image7.png" alt="duck" style="width:20%;height: 20%;float:left;;margin-left: 10%">
+            <img src="image7.png" alt="duck" style="width:35%;height: 35%;float:left;;margin-left: 10%">
             <div class="stl">
-            La page dépôts va vous permettre de déposer votre projet en lui intribuant son tag (doc, jeu,...).
+            La page dépôts va vous permettre de déposer votre projet en lui attribuant son tag (doc, jeu,...).
         </div></div>
     </div>
 
