Petite faute génante

--- a/src/website/index.html
+++ b/src/website/index.html
@@ -69,7 +69,7 @@
         <div class ="par">
             <img id="scr3" src="image7.png" class="screen" alt="duck" style="width:35%;height: 35%;float:left;;margin-left: 10%">
             <div class="stl">
-            La page dépôts va vous permettre de déposer votre projet en lui attribuant son tag (doc, jeu,...).
+            La page dépôt va vous permettre de déposer votre projet en lui attribuant son tag (doc, jeu,...).
         </div></div>
     </div>
 
