--- a/src/website/index.html
+++ b/src/website/index.html
@@ -64,7 +64,7 @@
             La page projet détient l'ensemble des projets mis en ligne, avec la possiblité<br>
             d'en rechercher un bien spécifique, ou encore de trier l'ensemble des projets<br>
             Vous pouvez également changer la vue des projets, soit en liste détailée ou en icône.<br>
-            Ensuite pour télécharger un projet, le petit boton vert est là pour ça.
+            Ensuite pour télécharger un projet, le petit bouton vert est là pour ça.
         </div></div>
         <div class ="par">
             <img id="scr3" src="image7.png" class="screen" alt="duck" style="width:35%;height: 35%;float:left;;margin-left: 10%">
